# xivapi-rs

./: Cargo.toml  README.md
src/: builder.rs  comma.rs  error.rs  lib.rs  models.rs  prelude.rs  routes.rs
src/models/: achievement.rs  action.rs  character.rs  content.rs  emote.rs  enemy.rs  fate.rs  free_company.rs  id.rs  instance_content.rs  item.rs  leve.rs  linkshell.rs  minion.rs  mount.rs  npc.rs  place_name.rs  quest.rs  recipe.rs  search.rs  status.rs  title.rs  weather.rs
src/models/character/: search.rs
src/models/content/: achievement.rs  action.rs  emote.rs  enemy.rs  fate.rs  instance_content.rs  item.rs  leve.rs  minion.rs  mount.rs  npc.rs  place_name.rs  quest.rs  recipe.rs  status.rs  title.rs  weather.rs
src/models/search/: achievement.rs  action.rs  character.rs  emote.rs  enemy.rs  fate.rs  free_company.rs  instance_content.rs  item.rs  leve.rs  linkshell.rs  minion.rs  mount.rs  npc.rs  place_name.rs  quest.rs  recipe.rs  status.rs  title.rs  weather.rs
src/routes/: character.rs  content.rs  free_company.rs  linkshell.rs  search.rs
src/routes/character/: search.rs
src/routes/search/: character.rs  free_company.rs  linkshell.rs
src/util/: serde.rs
src/util/serde/: int_bool.rs  php_u64.rs  ts_str.rs  u64_str.rs
