cargo-features = ["edition"]

[package]
name = "xivapi"
version = "0.1.0"
authors = ["Kyle Clemens <git@kyleclemens.com>"]

edition = "2018"

[dependencies]
reqwest = "0.8"
url = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_urlencoded = "0.5"
failure = "0.1"
log = "0.4"
url_serde = "0.2"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.ffxiv_types]
version = "0.2"
default-features = false
features = ["worlds", "with_serde"]
